Fix a bunch of posts, not completely though.

--- a/source/posts/2008-12-31-2009-bring-it.markdown
+++ b/source/posts/2008-12-31-2009-bring-it.markdown
@@ -15,7 +15,7 @@ summary: "This is the story of a guy. A guy whose last 365 days could be equated
 
 But for Dan and I, we agreed that 2008 was a year spent setting up for 2009. Now 2009's here. *Bring it on.* :)
 
-Now with the *formalities* out of the way, I'll start off with this. From Jen and I and our 5 felines, have a **safe**, **joyous** and **very prosperous** New Year. ä»Šå¹´ã‚‚ã‚ˆã‚ã—ããŠé¡˜ã„ã—ã¾ã™! (I hope for your favour again in the coming year!)
+Now with the *formalities* out of the way, I'll start off with this. From Jen and I and our 5 felines, have a **safe**, **joyous** and **very prosperous** New Year.  今年もよろしくお願いします! (I hope for your favour again in the coming year!)
 
 [1]: http://avalonstar.com/blog/2008/mar/26/message-distorted/
 [2]: http://avalonstar.com/blog/2008/nov/10/revyver-be-acquired/
