--- a/source/posts/2009-09-02-timewarp.markdown
+++ b/source/posts/2009-09-02-timewarp.markdown
@@ -15,6 +15,6 @@ Even though I know of a few people that have taken the time to travel back in ti
 
 <object width="510" height="319"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=6408152&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=59a5d1&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=6408152&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=59a5d1&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="510" height="319"></embed></object>
 
-[^1]: Since I'm not \[willing|able|rich enough\] at the current moment to spend the $60 for Vimeo Pro, I can only post a low resolution video here. I encourage you to head to the [video's page][1] and watch the HD version of the video. :)
+[^1]: Once again, since I'm not willing, able, or rich enough at the current moment to spend the $60 for Vimeo Pro, I can only post a low resolution video here. I encourage you to head to the [video's page][1] and watch the HD version of the video. :)
 
 [1]: http://vimeo.com/6408152
