Media for the Mimeo and 12:34 posts.

--- a/source/posts/2010-12-30-1234.markdown
+++ b/source/posts/2010-12-30-1234.markdown
@@ -25,7 +25,7 @@ At points throughout this whole story, I felt I had some kind of control over th
 
 I went to lunch today with some co-workers from one of my contracts, I was first to the door so I held it and let them go in first. I came in behind them and waited for them to order. I did the same and followed them to our table to wait for our food. We sat there talking for about 3 minutes when I felt the urge to remember what number my order was. I looked down at my receipt and saw this:
 
-![](http://avalonstar.com/assets/4d1d8322dabe9d5ac800000c/1234.jpg)
+![](/journal/2010/1234/1234.jpg)
 
 **I was freaked out.**
 
